# cwww

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build_prod.sh  build_staging.sh  cwww.service  dependencies.sh  ngnix.conf
src/: main.c
src/app/: blog.c  db.c  db.h  middlewares.c  routes.c  routes.h
src/files/: md2html.c  md2html.h  read.c  read.h
src/server/: http.c  http.h  server.c  server.h
src/templar/: templar.c  templar.h
static/posts/: advanced-golang.md  guide-to-linux-servers-beginner-lvl.md  how-does-usb-work-and-linux-drivers.md  on-independance.md  what-is-apache-kafka.md  what-is-grpc.md
static/styles/: style.css
templates/: blogposts.html  home.html  index.html  index_template.html  post.html  projects.html
